<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/rewardDetailedFragment"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#DCEDC8"
              android:orientation="vertical"
              android:weightSum="1"
              tools:context="pes.gogreenapp.Fragments.RewardDetailedFragment"
              tools:ignore="MissingPrefix">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="250dp"
        tools:ignore="MissingPrefix">

        <ImageView
            android:id="@+id/rewardBackgroundImageProfile"
            android:layout_width="match_parent"
            android:layout_height="230dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:alpha="1.0"
            android:scaleType="centerCrop"
            android:tint="#88212121"/>

        <TextView
            android:id="@+id/titleDetailReward"
            fontPath="fonts/Raleway-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/dateValidDetailReward"
            android:layout_alignStart="@+id/dateValidDetailReward"
            android:layout_marginBottom="5dp"
            android:textColor="@color/colorWhite"
            android:textSize="24dp"/>

        <TextView
            android:id="@+id/dateValidDetailReward"
            fontPath="fonts/Raleway-Regular.ttf"
            android:layout_width="570px"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/rewardBackgroundImageProfile"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:textColor="@color/colorWhite"
            android:textSize="15dp"/>

        <ImageButton
            android:id="@+id/favoriteDetailButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:src="@mipmap/favorite"
            android:tag="favorite"
            android:tint="@color/colorWhite"/>

        <ImageButton
            android:id="@+id/actionDetailReward"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/favoriteDetailButton"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/circular_button"
            android:padding="10dp"
            android:src="@drawable/ic_cart"/>
    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="10dp"
        android:text="Reward"
        android:textColor="#000"
        android:textSize="18dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/descriptionDetailRewardImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:tint="@android:color/darker_gray"
            app:srcCompat="@drawable/ic_description_black_24dp"/>

        <TextView
            android:id="@+id/descriptionDetailReward"
            fontPath="fonts/Raleway-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/titleDetailReward"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            android:textSize="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/instructionsDetailRewardImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:tint="@android:color/darker_gray"
            app:srcCompat="@mipmap/ic_info_black_24dp"
            />

        <TextView
            android:id="@+id/instructionsDetailReward"
            fontPath="fonts/Raleway-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/advertDetailReward"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            android:textSize="15dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/consultWebDetailRewardImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:tint="@android:color/darker_gray"
            app:srcCompat="@drawable/ic_web_black_24dp"/>

        <TextView
            android:id="@+id/consultWebDetailReward"
            fontPath="fonts/Raleway-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/dateValidDetailReward"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            android:textSize="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/advertDetailRewardImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:tint="@android:color/darker_gray"
            app:srcCompat="@drawable/ic_warning_black_24dp"/>

        <TextView
            android:id="@+id/advertDetailReward"
            fontPath="fonts/Raleway-Regular.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/consultWebDetailReward"
            android:layout_marginRight="10dp"
            android:textColor="#000000"
            android:textSize="15dp"/>
    </LinearLayout>

</LinearLayout>