...
    <!-- Alert Dialog Messages -->
    <string name="givePoints">¿Está seguro que desea entregar los puntos a esos usuarios?</string>
    <string name="switchModeGive">¿Está seguro que desea cambiar el modo de entregar puntos?
        Se perderán los datos introducidos</string>

    <!-- Alert Dialog Buttons -->
    <string name="exchange">CANJEAR</string>
    <string name="givePointsAlertButton">ENTREGAR PUNTOS</string>
    <string name="accept">ACEPTAR</string>
    <string name="cancel">CANCELAR</string>
    <string name="arrow_switch_down">Arrow to activate Switch Menu</string>
    <string name="add_account">Añadir Cuenta</string>
    <string name="shop">Tienda</string>
    <string name="give_points">Dar Puntos</string>
    <string name="titulo">Titulo:</string>
    <string name="tituloCreateEvent">Titulo</string>
...
